<resources>
<string name="app_name">APRSdroid</string>
<string name="app_prefs">APRSdroid Preferences</string>
<string name="app_map">APRSdroid Map</string>
<string name="app_hub">APRSdroid Hub</string>
<string name="app_log">APRSdroid Log</string>
<string name="app_sta">Station Info</string>
<string name="app_messages">Messages</string>
<string name="app_messages_clear">Clear Messages</string>
<string name="firstrun">You need to configure APRSdroid with your callsign and passcode!</string>
<string name="wrongpasscode">Your passcode does not match your callsign!</string>
<string name="e_toolong_callsign">Your callsign is too long for Packet Radio!</string>
<string name="anon_warning">Without a passcode, your reports will not be propagated!</string>
<string name="mininterval">Minimum update time is 1 minute!</string>
<string name="singlelog">Send Position</string>
<string name="startlog">Start Tracking</string>
<string name="stoplog">Stop Tracking</string>
<string name="empty_logview">You have not yet sent or received any packets.\n\n
	Press the \"Menu\" button to send a single report or to start tracking your position.\n\n
	You can also change the application preferences from the menu.</string>
<string name="sta_lastreport">%s Last Report</string>
<string name="map_track_call">Tracking %s...</string>
<string name="map_track_unknown">Position for %s unknown!</string>
<string name="map_select">Select station</string>
<string name="map_loading">Loading...</string>
<string name="sta_ssids">Station SSIDs</string>
<string name="sta_history">Station History</string>
<string name="sta_map">Map</string>
<string name="sta_extmap">External Map</string>
<string name="sta_aprsfi">aprs.fi</string>
<string name="sta_qrzcom">QRZ.com</string>
<string name="p_regenerate">Regenerate Packets</string>
<string name="p_regenerate_summary">Dangerously regenerates heard packets with NO filter!!</string>
<string name="p_digipeating_entry">Digipeater</string>
<string name="p_digipeating_summary">Enable Digipeater</string>
<string name="p_igating_entry">IGate</string>
<string name="p_igating_summary">Enable IGate</string>
<string name="p_dedupe">Dedupe Timeout</string>
<string name="p_dedupe_entry">Timeout in seconds</string>
<string name="p_dedupe_summary">Digipeat timeout for duplicate packets</string>
<string name="p_digipeaterpath">Digipeater Path</string>
<string name="p_digipeaterpath_entry">Set Digi Path</string>
<string name="p_digipeaterpath_summary">Paths to digipeat</string>
<string name="p__ham">Amateur Radio</string>
<string name="p_callsign_nossid">Callsign (without SSID)</string>
<string name="p_callsign_summary">Your HAM radio callsign</string>
<string name="p_callsign_entry">Enter your callsign</string>
<string name="p_passcode">APRS-IS Passcode</string>
<string name="p_passcode_summary">APRS-IS validation passcode</string>
<string name="p_passcode_entry">Enter the passcode for your call</string>
<string name="p_passreq">Request Passcode</string>
<string name="p_passreq_summary">Request APRS-IS passcode online</string>
<string name="p__aprs">APRS Settings</string>
<string name="p_ssid">SSID</string>
<string name="p_ssid_summary">Station type (1..15; 9=Mobile, 10=APRS-IS)</string>
<string name="p_ssid_entry">Enter the SSID for your station</string>
<string name="p_symbol">APRS symbol</string>
<string name="p_symbol_summary">Your symbol for map display</string>
<string name="p_status">Comment field</string>
<string name="p_status_summary">The text after your coordinates</string>
<string name="p_status_entry">Enter your beacon comment</string>
<string name="p__connection">APRS Connection</string>
<string name="p_conntype">Connection Protocol</string>
<string name="p_conntype_entry">Choose the connection protocol</string>
<string name="p_link">Connection Type</string>
<string name="p_link_entry">Choose the link type</string>
<string name="p_connsetup">Connection Preferences</string>
<string name="p_conn_aprsis">Internet (APRS-IS)</string>
<string name="p_conn_afsk">Audio (AFSK)</string>
<string name="p_conn_kiss">TNC (KISS)</string>
<string name="p_aprsis_tcp">TCP connection</string>
<string name="p_link_bt">Bluetooth SPP</string>
<string name="p_link_ble">Bluetooth Low Energy</string>
<string name="p_source_manual">Manual Position</string>
<string name="p_source_periodic">Periodic GPS/Network Position</string>
<string name="p_source_smart">SmartBeaconing™ Position</string>
<string name="p_source_lat">Latitude</string>
<string name="p_source_lon">Longitude</string>
<string name="p_source_coord">Coordinate</string>
<string name="p_source_from_map">Choose on map</string>
<string name="p_source_get_last">Use last GPS position</string>
<string name="p_source_auto">Automatic Posting</string>
<string name="p_source_auto_summary">Perform periodic position posting</string>
<string name="p_host">Server</string>
<string name="p_igserver">Server</string>
<string name="p_host_entry">Enter the APRS-IS server hostname</string>
<string name="p_igserver_entry">Enter the APRS-IS server hostname</string>
<string name="p_host_hint">host:port</string>
<string name="p_igserver_hint">host:port</string>
<string name="p__position">Position Reports</string>
<string name="p__location">Location Settings</string>
<string name="p_sb_help">SmartBeaconing™ help</string>
<string name="p_sb_fast_speed">Fast Speed [km/h]</string>
<string name="p_sb_fast_speed_summary">Minimum speed for fast position updates</string>
<string name="p_sb_fast_rate">Fast Rate [s]</string>
<string name="p_sb_fast_rate_summary">Beacon rate at fast speed</string>
<string name="p_sb_slow_speed">Slow Speed [km/h]</string>
<string name="p_sb_slow_speed_summary">Maximum speed for slow position updates</string>
<string name="p_sb_slow_rate">Slow Rate [s]</string>
<string name="p_sb_slow_rate_summary">Beacon rate at slow speed</string>
<string name="p_corner_pegging">Corner Pegging</string>
<string name="p_cp_turn_time">Min Turn Time [s]</string>
<string name="p_cp_turn_time_summary">Minimum beacon rate when changing direction</string>
<string name="p_cp_turn_angle">Min Turn Angle [°]</string>
<string name="p_cp_turn_angle_summary">Minimum angle at high speed</string>
<string name="p_cp_turn_slope">Turn Slope</string>
<string name="p_cp_turn_slope_summary">Influence of speed on the minimum angle</string>
<string name="p_interval">Minimum update time</string>
<string name="p_interval_summary">Minutes between beacon transmissions</string>
<string name="p_interval_entry">Enter the update interval [min]</string>
<string name="p_distance">Minimum update distance</string>
<string name="p_distance_summary">Kilometers before beacon transmission (set to 0 for time-only)</string>
<string name="p_distance_entry">Enter the update distance [km]</string>
<string name="p_netloc">Use network location</string>
<string name="p_netloc_summary">Acquire position from the cellular network</string>
<string name="p_gps">GPS Precision</string>
<string name="p_gps_summary">Battery usage vs. position quality</string>
<string name="p_gps_entry">Please set the GPS Precision</string>
<string name="p_keepscreen">Keep screen awake</string>
<string name="p_keepscreen_summary">Do not turn off screen when APRSdroid is in the foreground</string>
<string name="p__display">Display and Notifications</string>
<string name="p_msg_led">Blinking LED</string>
<string name="p_msg_led_on">LED notifications are on</string>
<string name="p_msg_led_off">LED notifications are off</string>
<string name="p_msg_vibr">Vibration</string>
<string name="p_msg_vibr_on">Vibration notifications are on</string>
<string name="p_msg_vibr_off">Vibration notification are off</string>
<string name="p_msg_ring">Ringtone</string>
<string name="p_msg_ring_summary">Tone for incoming messages</string>
<string name="p_message_retry">Message Retries</string>
<string name="p_message_retry_entry">Number of messages to retry</string>
<string name="p_message_retry_summary">Message retry limit</string>
<string name="p_retry_interval">Retry Interval</string>
<string name="p_retry_interval_entry">Retry interval start rate</string>
<string name="p_retry_interval_summary">Rate doubles each retry</string>
<string name="p_ackdupe_interval">Ack Dupe Timeout or Disable</string>
<string name="p_ackdupe_interval_entry">Ack dupe timeout (0 = ack disabled)</string>
<string name="p_ackdupe_interval_summary">Dupe acks allowed after timeout</string>
<string name="p_ackdupetoggle">Ack Dupe Timeout</string>
<string name="p_ackdupetoggle_summary">Sends dupe acks after the timeout period</string>
<string name="p_aprs_path">APRS digi path</string>
<string name="p_aprs_path_summary">Sequence of digipeaters</string>
<string name="p_aprs_path_entry">Enter the comma separated digi path</string>
<string name="p_afsk_prefix">Frame Sync Prefix</string>
<string name="p_afsk_prefix_summary">No-Op Preamble (e.g. for VOX control)</string>
<string name="p_afsk_prefix_entry">Enter the prefix time [ms]</string>
<string name="p_afsk_hqdemod">High-Quality Demodulator</string>
<string name="p_afsk_hqdemod_summary">javAX25lib: 800 MHz CPU required</string>
<string name="p_afsk_btsco">Bluetooth Headset</string>
<string name="p_afsk_btsco_summary">Use Bluetooth (SCO) headset for AFSK</string>
<string name="p_afsk_output">Audio Output</string>
<string name="p_tcp_server_summary">APRS-IS TCP server (port 14580) to contact</string>
<string name="p_igserver_summary">APRS-IS TCP server (port 14580) to contact</string>
<string name="p_filterdist">Neighbor radius</string>
<string name="p_filterdist_summary">Receive packets from stations in this radius</string>
<string name="p_filterdist_entry">Radius around you to monitor for packets [km]</string>
<string name="p_filter">Packet filter</string>
<string name="p_igfilter">Packet filter</string>
<string name="p_filter_hint">b/BUDDY o/OBJECT ...</string>
<string name="p_filter_summary">Filter for incoming packets</string>
<string name="p_filter_entry">Enter a filter for incoming packets</string>
<string name="p_igfilter_hint">b/BUDDY o/OBJECT ...</string>
<string name="p_igfilter_summary">Filter for incoming packets</string>
<string name="p_igfilter_entry">Enter a filter for incoming packets</string>
<string name="p_filterhelp">Message filter help</string>
<string name="p_filterhelp_summary">Online reference for APRS-IS filters</string>
<string name="p_sotimeout">TCP socket timeout</string>
<string name="p_sotimeout_summary">Time before resetting the connection</string>
<string name="p_sotimeout_entry">Timeout value in seconds (0 = disable)</string>
<string name="p_igsotimeout">TCP socket timeout</string>
<string name="p_igsotimeout_summary">Time before resetting the connection</string>
<string name="p_igsotimeout_entry">Timeout value in seconds (0 = disable)</string>
<string name="p_reconnect">TCP reconnect timeout</string>
<string name="p_reconnect_entry">Timeout value in seconds</string>
<string name="p_bt_client">Client Mode</string>
<string name="p_bt_client_summary">APRSdroid establishes the connection (Keep this on!)</string>
<string name="p_bt_tnc_device">TNC Bluetooth Device</string>
<string name="p_bt_tnc_device_summary">Choose your TNC from paired devices</string>
<string name="p_bt_tnc_device_entry">Choose device</string>
<string name="p_bt_channel">Channel</string>
<string name="p_bt_channel_summary">Bluetooth channel on the TNC</string>
<string name="p_bt_channel_entry">Enter channel (most often: "1"; empty for SPP)</string>
<string name="p_tnc_init">TNC init string</string>
<string name="p_tnc_init_summary">Initialization commands for TNC (URL-encoded, Esc=%%1B, "%%"=%%25)</string>
<string name="p_tnc_delay">TNC init delay</string>
<string name="p_tnc_delay_summary">Time to wait after each line</string>
<string name="p_tnc_delay_entry">TNC init delay [ms]</string>
<string name="p_bt_prefs">Bluetooth settings</string>
<string name="p_bt_prefs_summary">Enable Bluetooth, pair devices...</string>
</resources>