<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
	    android:title="@string/p__ham">
            
        <EditTextPreference
                android:key="callsign"
		android:inputType="textCapCharacters"
		android:title="@string/p_callsign_nossid"
		android:summary="@string/p_callsign_summary"
		android:hint="@string/p_callsign_nossid"
		android:dialogTitle="@string/p_callsign_entry" />

        <EditTextPreference
                android:key="passcode"
		android:inputType="number"
		android:title="@string/p_passcode"
		android:summary="@string/p_passcode_summary"
		android:dialogTitle="@string/p_passcode_entry" />
	<Preference
		android:title="@string/p_passreq"
		android:summary="@string/p_passreq_summary" >
		<intent android:action="android.intent.action.VIEW"
			android:data="@string/passcode_url" />
	</Preference>

    </PreferenceCategory>

    <PreferenceCategory
	android:title="@string/p__aprs">

        <ListPreference
                android:key="ssid"
		android:title="@string/p_ssid"
		android:summary="@string/p_ssid_summary"
                android:entries="@array/p_ssid_e"
                android:entryValues="@array/p_ssid_ev"
		android:defaultValue="5"
		android:dialogTitle="@string/p_ssid_entry" />

    <!-- sub-screen "Position Reports" -->
    <PreferenceScreen
	    android:title="@string/p__position"
	    android:summary="@string/p__position_summary">

        <EditTextPreference
                android:key="symbol"
		android:hint="@string/default_symbol"
		android:title="@string/p_symbol"
		android:summary="@string/p_symbol_summary"
		android:defaultValue="@string/default_symbol"
		android:dialogTitle="@string/p_symbol_entry" />

        <EditTextPreference
                android:key="status"
		android:hint="@string/default_status"
		android:title="@string/p_status"
		android:defaultValue="@string/default_status"
		android:summary="@string/p_status_summary"
		android:dialogTitle="@string/p_status_entry" />

    <PreferenceCategory
	android:title="@string/p__location">

        <EditTextPreference
                android:key="interval"
		android:inputType="number"
		android:defaultValue="10"
		android:title="@string/p_interval"
		android:summary="@string/p_interval_summary"
		android:dialogTitle="@string/p_interval_entry" />
                
        <EditTextPreference
                android:key="distance"
		android:inputType="number"
		android:defaultValue="10"
		android:title="@string/p_distance"
		android:summary="@string/p_distance_summary"
		android:dialogTitle="@string/p_distance_entry" />

        <ListPreference
                android:key="gps_activation"
		android:title="@string/p_gps"
		android:summary="@string/p_gps_summary"
                android:entries="@array/p_gps_e"
                android:entryValues="@array/p_gps_ev"
		android:defaultValue="med"
		android:dialogTitle="@string/p_gps_entry" />

        <CheckBoxPreference
                android:key="netloc"
		android:title="@string/p_netloc"
		android:summary="@string/p_netloc_summary" />

    </PreferenceCategory>
    </PreferenceScreen>
    <!-- sub-screen "Messaging" -->
    <PreferenceScreen
	    android:title="@string/p__message"
	    android:summary="@string/p__message_summary">
    <PreferenceCategory
	android:title="@string/p__msg_notify">

	<CheckBoxPreference
		android:key="notify_led"
		android:title="@string/p_msg_led"
		android:summaryOn="@string/p_msg_led_on"
		android:summaryOff="@string/p_msg_led_off"
		android:defaultValue="true"
		/>
	<CheckBoxPreference
		android:key="notify_vibr"
		android:title="@string/p_msg_vibr"
		android:summaryOn="@string/p_msg_vibr_on"
		android:summaryOff="@string/p_msg_vibr_off"
		android:defaultValue="true"
		/>
	<RingtonePreference
		android:key="notify_ringtone"
		android:title="@string/p_msg_ring"
		android:summary="@string/p_msg_ring_summary"
		android:ringtoneType="notification"
		android:showDefault="true"
		android:showSilent="true"
		/>
    </PreferenceCategory>
    </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
	android:title="@string/p__connection">

        <ListPreference
                android:key="backend"
		android:title="@string/p_conntype"
		android:summary="@string/p_conntype_summary"
                android:entries="@array/p_conntype_e"
                android:entryValues="@array/p_conntype_ev"
		android:defaultValue="tcp"
		android:dialogTitle="@string/p_conntype_entry" />

        <PreferenceScreen
		android:title="@string/p_connsetup"
		android:summary="@string/p_connsetup_summary">

            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.aprsdroid.app"
                    android:targetClass="org.aprsdroid.app.BackendPrefs" />

        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
	android:title="@string/p__display">
        <CheckBoxPreference
                android:key="keepscreen"
		android:title="@string/p_keepscreen"
		android:summary="@string/p_keepscreen_summary" />
    </PreferenceCategory>

</PreferenceScreen>
