<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
	    android:title="@string/p_aprsis_tcp">

        <de.duenndns.EditTextPreferenceWithValue
                android:key="tcp.server"
		android:inputType="textUri"
		android:title="@string/p_host"
		android:summary="@string/p_tcp_server_summary"
		android:hint="@string/p_host_hint"
		android:defaultValue="euro.aprs2.net"
		android:dialogTitle="@string/p_host_entry" />

	<de.duenndns.EditTextPreferenceWithValue
		android:key="tcp.filterdist"
		android:inputType="number"
		android:title="@string/p_filterdist"
		android:summary="@string/p_filterdist_summary"
		android:defaultValue="50"
		android:dialogTitle="@string/p_filterdist_entry" />

        <de.duenndns.EditTextPreferenceWithValue
                android:key="tcp.filter"
		android:singleLine="true"
		android:title="@string/p_filter"
		android:summary="@string/p_filter_summary"
		android:hint="@string/p_filter_hint"
		android:dialogTitle="@string/p_filter_entry" />

	<Preference
		android:key="tcp.filter.help"
		android:title="@string/p_filterhelp"
		android:summary="@string/p_filterhelp_summary" >
		<intent android:action="android.intent.action.VIEW"
			android:data="http://www.aprs-is.net/javAPRSFilter.aspx" />
	</Preference>
	<de.duenndns.EditTextPreferenceWithValue
		android:key="tcp.sotimeout"
		android:inputType="number"
		android:title="@string/p_sotimeout"
		android:summary="@string/p_sotimeout_summary"
		android:defaultValue="120"
		android:dialogTitle="@string/p_sotimeout_entry" />

	<de.duenndns.EditTextPreferenceWithValue
		android:key="tcp.reconnect"
		android:inputType="number"
		android:title="@string/p_reconnect"
		android:summary="@string/p_reconnect"
		android:defaultValue="30"
		android:dialogTitle="@string/p_reconnect_entry" />

    </PreferenceCategory>

</PreferenceScreen>

