<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
	    android:title="@string/p_link_bt">

        <CheckBoxPreference
                android:key="bt.client"
		android:title="@string/p_bt_client"
		android:defaultValue="true"
		android:summary="@string/p_bt_client_summary" />

	<de.duenndns.BluetoothDevicePreference
		android:key="bt.mac"
		android:dependency="bt.client"
		android:title="@string/p_bt_tnc_device"
		android:summary="@string/p_bt_tnc_device_summary"
		android:dialogTitle="@string/p_bt_tnc_device_entry" />
        <de.duenndns.EditTextPreferenceWithValue
                android:key="bt.channel"
		android:dependency="bt.client"
		android:inputType="number"
		android:title="@string/p_bt_channel"
		android:summary="@string/p_bt_channel_summary"
		android:dialogTitle="@string/p_bt_channel_entry" />

	<Preference
		android:title="@string/p_bt_prefs"
		android:summary="@string/p_bt_prefs_summary" >
		<intent android:action="android.intent.action.MAIN"
			android:targetPackage="com.android.settings"
			android:targetClass="com.android.settings.bluetooth.BluetoothSettings" />
	</Preference>

    </PreferenceCategory>
</PreferenceScreen>

