<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
	    android:title="@string/p_conn_afsk">

        <CheckBoxPreference
                android:key="afsk.hqdemod"
		android:title="@string/p_afsk_hqdemod"
		android:summary="@string/p_afsk_hqdemod_summary"
		android:defaultValue="true"
		/>

        <CheckBoxPreference
                android:key="afsk.btsco"
		android:title="@string/p_afsk_btsco"
		android:summary="@string/p_afsk_btsco_summary"
		android:defaultValue="false"
		android:dependency="afsk.hqdemod"
		/>

        <de.duenndns.ListPreferenceWithValue
                android:key="afsk.output"
		android:title="@string/p_afsk_output"
                android:entries="@array/p_afsk_out_e"
                android:entryValues="@array/p_afsk_out_ev"
		android:defaultValue="0"
		android:dialogTitle="@string/p_afsk_output"
		/>

        <de.duenndns.EditTextPreferenceWithValue
                android:key="afsk.prefix"
		android:inputType="number"
		android:defaultValue="200"
		android:hint="200"
		android:title="@string/p_afsk_prefix"
		android:summary="@string/p_afsk_prefix_summary"
		android:dialogTitle="@string/p_afsk_prefix_entry" />

    </PreferenceCategory>

</PreferenceScreen>

