<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
	    android:title="@string/p_conn_afsk">

        <EditTextPreference
                android:key="digi_path"
		android:hint="hop1,hop2,.."
		android:defaultValue="WIDE1-1"
		android:title="@string/p_aprs_path"
		android:summary="@string/p_aprs_path_summary"
		android:dialogTitle="@string/p_aprs_path_entry" />

        <EditTextPreference
                android:key="afsk.prefix"
		android:inputType="number"
		android:defaultValue="1000"
		android:hint="1000"
		android:title="@string/p_afsk_prefix"
		android:summary="@string/p_afsk_prefix_summary"
		android:dialogTitle="@string/p_afsk_prefix_entry" />

    </PreferenceCategory>

</PreferenceScreen>

