<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
	android:title="@string/p_source_manual">

        <de.duenndns.EditTextPreferenceWithValue
                android:key="manual_lat"
		android:inputType="number|numberSigned|numberDecimal"
		android:defaultValue="0.000"
		android:title="@string/p_source_lat"
		android:summary="@string/p_source_coord"
		android:dialogTitle="@string/p_source_lat" />
                
        <de.duenndns.EditTextPreferenceWithValue
                android:key="manual_lon"
		android:inputType="number|numberSigned|numberDecimal"
		android:defaultValue="0.000"
		android:title="@string/p_source_lon"
		android:summary="@string/p_source_coord"
		android:dialogTitle="@string/p_source_lon" />

    <PreferenceScreen
	android:title="@string/p_source_from_map"
	android:summary="">

	<intent android:action="android.intent.action.MAIN"
		android:data="chooseOnMap"
		android:targetPackage="org.aprsdroid.app"
		android:targetClass="org.aprsdroid.app.LocationPrefs" />
    </PreferenceScreen>

    <PreferenceScreen
	    android:title="@string/p_source_get_last"
	    android:summary="">

            <intent android:action="android.intent.action.MAIN"
		    android:data="gps2manual"
                    android:targetPackage="org.aprsdroid.app"
                    android:targetClass="org.aprsdroid.app.LocationPrefs" />
    </PreferenceScreen>
                
        <CheckBoxPreference
                android:key="periodicposition"
		android:title="@string/p_source_auto"
		android:summary="@string/p_source_auto_summary"
		android:defaultValue="true"
		/>
        <de.duenndns.EditTextPreferenceWithValue
		android:dependency="periodicposition"
                android:key="interval"
		android:inputType="number"
		android:defaultValue="10"
		android:title="@string/p_interval"
		android:summary="@string/p_interval_summary"
		android:dialogTitle="@string/p_interval_entry" />
                
    </PreferenceCategory>
</PreferenceScreen>


